# redeliste-cli

./: .gitignore  Cargo.toml  Readme.md
src/: main.rs
