[package]
name = "redeliste-cli"
version = "0.1.0"
edition = "2021"
authors = ["FlorianXXIV"]
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4", features = ["derive"] }
reqwest = {version = "0.11", features = ["json"]}
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
error-chain = "0.12"
signalrs-client = "0.1"
tracing-subscriber = "0.3"
tracing = "0.1"